Simple version for calculating wilcoxon classifications